<resources>
    <string name="app_name">AlNiqasha User</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="intro_page_1_txt">Subscribe and learn about the most professional henna artists</string>
    <string name="intro_page_2_txt">Adorn your look and stand out with the most beautiful henna designs</string>
    <string name="intro_page_3_txt">Special offers on all types of henna</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="choose_language">Choose Language</string>
    <string name="arabic">Arabic</string>
    <string name="english" translatable="false">English</string>
    <string name="continue_txt">Continue</string>
    <string name="login">Login</string>
    <string name="log_in">LOG IN</string>
    <string name="choose_login_signup_log_in">LOG IN</string>
    <string name="choose_login_signup_sign_up">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_click_back_again_to_exist">Please click BACK again to exit</string>
    <string name="welcome_please_log_in_your_credentials_to_continue">Welcome! Please log in your credentials to continue.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account_yet">Do not have an account yet?</string>
    <string name="after_completing_your_registration_enjoy_browsing_our_services_and_features">After completing your registration, enjoy browsing our services and features.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_username_email">Please enter your username/email</string>
    <string name="please_enter_valid_username">Please enter valid username</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="invalid_password">"Invalid Password "</string>
    <string name="incorrect_password">"Incorrect Password "</string>
    <string name="incorrect_username">"Incorrect Username "</string>
    <string name="enter_your_email_address_and_we_will_be_sending_you_instructions_on_how_to_reset_your_password">Enter your email address and we will be sending you instructions on how to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="please_first_enter_your_password">please first enter your password</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="emojis_are_not_allowed">Emoji\'s are not allowed</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="mob_num_length_valid">"Phone number must be 7 – 15 digits"</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_verify_your_password">Please verify  your password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verification_text">We have sent a 4-Digit code to your registered mobile\n number. Please enter the code below.</string>
    <string name="didn_t_received_any_code">Didn\'t received any code?</string>
    <string name="resend">Resend</string>
    <string name="please_enter_your_otp">Please enter your otp</string>
    <string name="otp_length_valid">Otp length should be equal to 4 characters</string>
    <string name="featured_naqashat">Featured Naqashat: </string>
    <string name="enter_keywords">Enter keywords</string>
    <string name="select_service">Select Service</string>
    <string name="filter_search">Filter Search:</string>
    <string name="services">Services:</string>
    <string name="henna_services">Services:</string>
    <string name="location">Location:</string>
    <string name="site">Site:</string>
    <string name="low_high">Low - High</string>
    <string name="high_low">High - Low</string>
    <string name="nearby">Nearby</string>
    <string name="view_by">View by:</string>
    <string name="offers_and_discounts">Offers and Discounts:</string>
    <string name="supplier_name">Supplier name</string>
    <string name="category">Category:</string>
    <string name="current_bookings">Current Bookings</string>
    <string name="bookings_history">Bookings History</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="accepted">Accepted</string>
    <string name="approved">Approved</string>
    <string name="cancelled">Cancelled</string>
    <string name="book_service">Book Service</string>
    <string name="payment">Payment:</string>
    <string name="how_many_ladies">How many ladies?</string>
    <string name="how_many_childrens">How many childrens?</string>
    <string name="booking_date_time">Booking date/time</string>
    <string name="filtered_results">Filtered Results:</string>
    <string name="follow">Follow</string>
    <string name="gallery">Gallery</string>
    <string name="reviews">Reviews</string>
    <string name="service_fee">Service Fee</string>
    <string name="sub_total">Sub total</string>
    <string name="total_cost">Total Cost:</string>
    <string name="select_your_address">Select your address</string>
    <string name="move_the_pin_on_the_map_to_select_your_exact_location_or_enter_it_manually">Move the pin on the map to select your exact location   or enter it manually.</string>
    <string name="enter_manually">Enter manually</string>
    <string name="flat_villa">Flat / Villa</string>
    <string name="building_name">Building Name</string>
    <string name="title">Title</string>
    <string name="street_area">Street / Area</string>
    <string name="emirate">Emirate</string>
    <string name="set_as_default">Set as default address</string>
    <string name="save">Save</string>
    <string name="save_one">Save</string>
    <string name="write_a_review">Write a review</string>
    <string name="enter_your_review_here">Enter your review here</string>
    <string name="booking_details">Booking Details</string>
    <string name="status">Status</string>
    <string name="service_desc" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="ladies">Ladies</string>
    <string name="childrens">Childrens</string>
    <string name="special_request">Special Request</string>
    <string name="observations">Observations</string>
    <string name="total">Total</string>
    <string name="rate_naqasha">Rate Naqasha</string>
    <string name="chat_with_admin">Chat With Admin</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="cancellation_details">CANCELLATION DETAILS</string>
    <string name="reason_for_cancellation">Reason for cancellation:</string>
    <string name="i_have_read_and_accept_the">I have read and accept the</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="proceed">Proceed</string>
    <string name="how_would_you_rate_your_experience">How would you rate your experience?</string>
    <string name="cancellation_reason">Cancellation reason:</string>
    <string name="reschedule_booking">Reschedule Booking</string>
    <string name="choose_different_naqasha">Choose Different Naqasha</string>
    <string name="book_070821001_was_cancelled_by">BOOK#070821001 was cancelled by:</string>
    <string name="new_schedule">New Schedule</string>
    <string name="available_hennaya">Available Hennaya</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_title">Card Title</string>
    <string name="card_number">Card Number</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="save_card">Save Card</string>
    <string name="saved_address">Saved Address</string>
    <string name="add_new_address">Add new address</string>
    <string name="edit">Edit</string>
    <string name="general_information">General Information</string>
    <string name="full_name">Full Name</string>
    <string name="message">Message</string>
    <string name="good_day_nhow_can_we_help_you_today">Good day!  How can we help you today?</string>
    <string name="need_more_help">Need more help?</string>
    <string name="faq_page">FAQ PAGE</string>
    <string name="faq">FAQ</string>
    <string name="admin_chat">Admin Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="please_choose_your_language">Please choose your language</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="places_api_key" translatable="false">AIzaSyCh5hBReaLSROrja5l_F4k8a30c18lM9sE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="iban" translatable="false">IBAN</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="my_cards">My Cards</string>
    <string name="my_locations">My Locations</string>
    <string name="about_us">About Us</string>
    <string name="who_are_we">Who are we</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_underlined"><u>Terms and Conditions</u></string>
    <string name="please_accept_terms_conditions">Please accept terms and conditions</string>
    <string name="privacy_and_policy">Privacy And Policy</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="go_back">Go Back</string>
    <string name="ooops">Ooops</string>
    <string name="no_internet">No Internet</string>
    <string name="swipe_to_select_the_minimum_nearby_location">Swipe to select the minimum nearby location</string>
    <string name="ok">OK</string>
    <string name="_0_mi" translatable="false">0 mi</string>
    <string name="_100_mi" translatable="false">100 mi</string>
    <string name="cancellation_policy_message_1">Can the Hanayh (artist) cancel a previously booked appointment?</string>
    <string name="cancellation_policy_message">Al-Niqasha can cancel only one appointment per month, and if it exceeds that, the Hanahy(artist) account will be suspended and disabled in proportion to the administration of the application and according to their assessment of the damages suffered by the users of the application due to the cancellation of their reservation with the Hanahy(artist).</string>
</resources>