<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.NoInternetFragment">

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:padding="1dp"
            app:srcCompat="@drawable/ic_baseline_wifi_off_24" />


    <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/ooops"
            android:textColor="@color/gold"
            android:textSize="36sp" />

    <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textAllCaps="true"
            android:textColor="@color/gold"
            android:textSize="24sp" />


    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/retry"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/curved_gold_filled_rect_box"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="20dp"
            android:textSize="22dp" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/close"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/curved_gold_filled_rect_box"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="20dp"
            android:textSize="22dp" />
</LinearLayout>