<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="@color/black"
    app:strokeColor="@color/gold"
    app:strokeWidth="2dp"
    app:cardCornerRadius="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancellation_policy"
            android:textColor="@color/gold"
            android:paddingHorizontal="@dimen/_8sdp"
            android:id="@+id/tvCancellationPolicyText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_8sdp"
            android:id="@+id/tvCancellationPolicyDetails1"
            app:layout_constraintTop_toBottomOf="@id/tvCancellationPolicyText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/gold"
            android:text="@string/cancellation_policy_message_1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_8sdp"
            android:id="@+id/tvCancellationPolicyDetails2"
            app:layout_constraintTop_toBottomOf="@id/tvCancellationPolicyDetails1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/gold"
            android:text="@string/cancellation_policy_message"/>

        <Button
            android:id="@+id/closeDialogBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvCancellationPolicyDetails2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/ok"
            android:textSize="@dimen/_12ssp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>