<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/black"
        app:strokeColor="@color/gold"
        app:strokeWidth="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:text="@string/swipe_to_select_the_minimum_nearby_location"
                android:fontFamily="@font/avenir_heavy"
                android:textColor="@color/gold"
                android:layout_gravity="center"
                android:textStyle="normal"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/tv_nearby_desc"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/seek_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">
                <SeekBar
                    android:id="@+id/nearby_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:indeterminate="false"
                    android:progress="50"
                    android:progressBackgroundTint="@color/silver"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_mi"
                    android:fontFamily="@font/avenir_heavy"
                    android:textColor="@color/gold"
                    android:textStyle="normal"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/_8ssp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:id="@+id/tv_starting"
                    android:gravity="center" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/_100_mi"
                    android:fontFamily="@font/avenir_heavy"
                    android:textColor="@color/gold"
                    android:textStyle="normal"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textSize="@dimen/_8ssp"
                    android:id="@+id/tv_ending"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    app:layout_constraintTop_toBottomOf="@id/tv_starting"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/gold"
                    android:fontFamily="@font/avenir_heavy"
                    android:id="@+id/ok_tv"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    app:layout_constraintTop_toBottomOf="@id/tv_starting"
                    app:layout_constraintEnd_toStartOf="@id/ok_tv"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:textColor="@color/gold"
                    android:fontFamily="@font/avenir_heavy"
                    android:id="@+id/cancel_tv"/>
            </LinearLayout>



        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>





</androidx.constraintlayout.widget.ConstraintLayout>