<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp"
    app:cardBackgroundColor="@color/black"
    app:strokeColor="@color/gold"
    app:strokeWidth="@dimen/_2sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/_8sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:padding="1dp"
                app:srcCompat="@drawable/ic_baseline_wifi_off_24" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/ooops"
                android:textColor="@color/gold"
                android:textSize="36sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_internet"
                android:textAllCaps="true"
                android:textColor="@color/gold"
                android:textSize="24sp" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/retry"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:background="@drawable/curved_gold_filled_rect_box"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:layout_marginTop="20dp"
                android:textSize="22dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>