<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".activities.ChooseLoginSignUpActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/golden_logo"
        android:contentDescription="@string/logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/transparent_gold_filled_rect_box"
            android:fontFamily="@font/avenir_medium"
            android:includeFontPadding="false"
            android:textColor="@color/gold"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textAllCaps="true"
            android:elevation="@dimen/_5sdp"
            android:text="@string/choose_login_signup_log_in"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_45sdp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/curved_gold_filled_rect_box"
            android:fontFamily="@font/avenir_medium"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal"
            android:textAllCaps="true"
            android:elevation="@dimen/_5sdp"
            android:text="@string/choose_login_signup_sign_up"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>